--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,10 +16,15 @@ jobs:
 
     - name: Setup Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v1  # Google Cloud SDKをセットアップする
+
+    - name: Authenticate with gcloud
+      uses: google-github-actions/auth@v0.4.0
       with:
-        service_account_key: ${{ secrets.GCP_SA_KEY }}  # GCPのサービスアカウントキー
-        project_id: ${{ secrets.GCP_PROJECT_ID }}  # GCPのプロジェクトID
-        export_default_credentials: true  # デフォルトの認証情報をエクスポートする
+        credentials: ${{ secrets.GCP_SA_KEY }}  # GCPのサービスアカウントキー
+
+    - name: Configure gcloud
+      run: |
+        gcloud config set project ${{ secrets.GCP_PROJECT_ID }}  # GCPのプロジェクトID
 
     - name: Deploy to GCP
       run: |  # GCPにデプロイするコマンドを実行
